   * Improve tooltip placement.
   * Move recruit/recall to top of context menu
   * Add a hotkey to launch test scenarios from the titlescreen
   * Added a Cutscene and Minimal Cutscene theme for UMC authors to use.
   * Improve layout of MP Create at low resolutions.
   * Game Load screen now lists the gold and total number of units for each
     side.
 * WML Engine:
   * Add base_income key to [store_side]
   * Fix issues with alpha animations on hidden units (#14503)
   * Extensions to GUI2 Canvas ([drawing] tag in dialogs):
     * New [round_rectangle] shape - a rectangle plus corner_radius
     * [circle] shape can now be drawn filled; color key is now border_color
     * [image] has new resize_mode=tile_center
     * Canvas colors can now be expressed as formulas. The formula must return
       the color as a list of its components, eg "([r, g, b, a])"
   * Empty tags are no longer written to the configs of [unit]s and [side]s.
   * New [change_theme] tag to change the theme mid-scenario
   * New [zoom] tag allows changing the zoom level from an event
   * [kill]animate=yes now plays victory animations if applicable
   * [kill] now supports [primary_attack] and [secondary_attack] for the
     animation
   * Fix [volume] not accepting 100% as the new volume.
   * New concat_to_* keys in unit_type inheritance allow amending keys
   * Accept [story] as ActionWML in events
   * Added a ~NO_TOD_SHIFT() ImagePathFunction which can be used on terrain and
     item images to prevent them from being affected by ToD lighting.
   * [unit]placement=name is now [unit]location_id=name and also honours the
     new overwrite and passable keys, deprecating placement=map_overwrite etc.
   * New zoom_levels key in [game_config] defines the allowed zoom levels.
   * The default color list is now defined via a default key in [color_range],
     rather than the default_color_list key in [game_config][colors].
   * Standard Unit Filter has new ability_type_active and trait keys