@@ -65,9 +65,7 @@
 		y1 = "(text_y_offset + 2)"
 		x2 = "(cursor_offset + {X_OFFSET})"
 		y2 = "(text_y_offset + text_font_height - 2)"
-		color = "255, 255, 255, 255"
-		# TODO: disabled until there's a way to deal with textboxes on multiple windows
-		#color = "([255, 255, 255, cursor_alpha])"
+		color = "([255, 255, 255, cursor_alpha])"
 		thickness = 1
 	[/line]
 #enddef
