@@ -125,6 +125,7 @@ Version 1.13.7+dev:
    * Improve layout of MP Create at low resolutions.
    * Game Load screen now lists the gold and total number of units for each
      side.
+   * Textboxes now have a blinking cursor when focused.
  * WML Engine:
    * Add base_income key to [store_side]
    * Fix issues with alpha animations on hidden units (#14503)
